[GR-44217] Graalvm locator works together with languages on module-path.